# python-surveilclient

./: .gitignore  .gitreview  .testr.conf  AUTHORS  ChangeLog  README.md  README.rst  python-surveilclient.spec  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
surveilclient/: client.py  exc.py  shell.py
surveilclient/common/: http.py  surveil_manager.py  utils.py
surveilclient/openstack/common/: cliutils.py
surveilclient/tests/: test_client.py  test_shell.py
surveilclient/tests/common/: test_http.py  test_utils.py
surveilclient/tests/v2_0/: clienttest.py
surveilclient/tests/v2_0/actions/: test_acknowledge.py  test_downtime.py  test_recheck.py
surveilclient/tests/v2_0/config/: test_businessimpactmodulations.py  test_checkmodulations.py  test_commands.py  test_contactgroups.py  test_contacts.py  test_hostgroups.py  test_hosts.py  test_macromodulations.py  test_notificationways.py  test_realms.py  test_servicegroups.py  test_services.py  (+1 more)
surveilclient/v1_0/: client.py  hosts.py  services.py  shell.py
surveilclient/v2_0/: client.py  shell.py
surveilclient/v2_0/actions/: __init__.py  acknowledge.py  downtime.py  recheck.py
surveilclient/v2_0/config/: __init__.py  businessimpactmodulations.py  checkmodulations.py  commands.py  contactgroups.py  contacts.py  hostgroups.py  hosts.py  macromodulations.py  notificationways.py  realms.py  servicegroups.py  services.py  timeperiods.py
surveilclient/v2_0/status/: __init__.py  events.py  hosts.py  metrics.py  services.py
tools/: surveil.bash_completion
(+5 files in other folders)
