[metadata]
name = python-surveilclient
summary = Surveil API Client Library
description-file =
    README.rst

[files]
packages =
    surveilclient

[entry_points]
console_scripts =
       surveil = surveilclient.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
